@@ -1475,6 +1475,13 @@ and the target will be permanently stuck with the race they are at that \
 moment.  The duration of the chant effect is a few hours of real time. \
 Casting this chant at the target again will lift the geas.
 
+CHANT_RELEASEMAGIC=CHANT_RELEASE_MAGIC
+CHANT_RELEASE_MAGIC=<ABILITY>\
+Usage    : CHANT "RELEASE MAGIC" [TARGET NAME] \n\r\
+Example  : chant "release magic" earring\n\r\
+This chant returns releases any magical enchantments in the target item, \
+thus bringing it back to the natural order.
+
 REPEL_VERMIN=CHANT_REPEL_VERMIN
 CHANT_REPELVERMIN=CHANT_REPEL_VERMIN
 CHANT_REPEL_VERMIN=<ABILITY>\
