@@ -5429,6 +5429,14 @@ The gypsy deals his or her tarot cards and reads them carefully to discern \
 the future of the target.  Tarot readings tend to see futures related to the race \
 of the target.
 
+THIEF_TASSEOGRAPHY=TASSEOGRAPHY
+TASSEOGRAPHY=<ABILITY>\
+Usage    : TASSEOGRAPHY [TARGET NAME]\n\r\
+Example  : tasseography bob\n\r\
+The gypsy studies coffee grounds carefully to discern \
+the future of the target.  Tasseography readings tend to see futures related to the factions, alignment, \
+and inclination of the target.
+
 TEND_MOUNT=FIGHTER_TENDMOUNT
 FIGHTER_TENDMOUNT=<ABILITY>\
 Usage    : TENDMOUNT [TARGET]\n\r\
