@@ -48,6 +48,7 @@
  46. Achievements now supports LEVELUP, LEVELDOWN, CLASSLEVELUP, CLASSLEVELDOWN events.
  47. POSE command now supports HERE argument.
  48. New Achievement award types: ITEM, and MOB
+ 49. New chants: release magic, tasseography
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
